# PupilLabsReplacer

./: .gitignore  README.md  TODO  TODO.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
backend/: requirements.txt
backend/app/: database.py  main.py
backend/app/api/routes/: aoi.py  events.py  export.py  gaze.py  projects.py  recordings.py
backend/app/models/: recording.py
backend/app/services/: recording_service.py
src/: App.tsx  index.css  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ConfirmDialog.tsx  HelpButton.tsx
src/components/exports/: AoiFixationsPanel.tsx  ExportSection.tsx  SurfacePositionsPanel.tsx
src/components/gaze/: GazeCalibrateStep.tsx  GazeDetectStep.tsx  GazeFixationStep.tsx  GazeMapStep.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/player/: EventSeekbar.tsx  RecordingThumbnail.tsx  VideoPlayer.tsx
src/lib/: api.ts  helpContent.ts  theme.tsx  utils.ts
src/pages/: AoiPage.tsx  EventsPage.tsx  ExportPage.tsx  GazePage.tsx  PaperGazePage.tsx  PlayerPage.tsx  ProjectsPage.tsx  RecordingsPage.tsx  VisualisationPage.tsx
src/types/: index.ts
thesis_venv/: pyvenv.cfg
