[project]
name = "pupillabsreplacer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vadim Chaikin", email = "s44vchai@uni-bonn.de" }
]
dependencies = [
    "flet>=0.84.0"
    ,"flet-video>=0.0.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
desktop_flavor = "full"    # Change to "full" to use flet-audio and flet-video
org = "com.mycompany"
product = "pupillabsreplacer"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
